@@ -1,3 +1,8 @@
+2006-01-20  Stuart Caie   <kyzer@4u.net>
+
+	* create_output_name(): add UTF-8 support for 6-byte characters.
+	Apparently they go that far these days.
+
 2007-01-20  Stuart Caie   <kyzer@4u.net>
 
 	* doc/wince_cab_format.html, src/wince_info: The REGKEYS "unknown"
